refactor; include side count

--- a/polygon.html
+++ b/polygon.html
@@ -12,6 +12,23 @@
   </head>
   <body>
     <h1>Nested Rotating Regular Polygons</h1>
+
+
+    <label for="sideCount">Select the number of sides:</label>
+    <select id="sideCount">
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5</option>
+      <option value="6">6</option>
+      <option value="7">7</option>
+      <option value="8">8</option>
+      <option value="9">9</option>
+      <option value="10">10</option>
+      <option value="11">11</option>
+      <option value="12">12</option>
+    </select>
+    <button onclick="generatePolygon()">Generate Polygon</button>
+
     <canvas id="canvas" width="500" height="500"></canvas>
 
     <script src="engine.js"></script>
