expansion to circumscribed by barycentric coords

--- a/polygon.html
+++ b/polygon.html
@@ -28,6 +28,7 @@
       <option value="12">12</option>
     </select>
     <button onclick="generatePolygon()">Generate Polygon</button>
+    <button onclick="testExpansion()">Expand example</button>
     <button onclick="examine()">Triangle barycentric coordinates</button>
 
     <canvas id="canvas" width="500" height="500"></canvas>
