rotating circumscribed polygons

--- a/polygon.html
+++ b/polygon.html
@@ -14,8 +14,8 @@
     <h1>Nested Rotating Regular Polygons</h1>
 
 
-    <label for="sideCount">Select the number of sides:</label>
-    <select id="sideCount">
+    <label for="polyCircum">Sides (circumscribed):</label>
+    <select id="polyCircum">
       <option value="3">3</option>
       <option value="4">4</option>
       <option value="5">5</option>
@@ -27,8 +27,23 @@
       <option value="11">11</option>
       <option value="12">12</option>
     </select>
+    <label for="polyInscribedSides">Sides (inscribed):</label>
+    <select id="polyInscribedSides">
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5</option>
+      <option value="6">6</option>
+      <option value="7">7</option>
+      <option value="8">8</option>
+      <option value="9">9</option>
+      <option value="10">10</option>
+      <option value="11">11</option>
+      <option value="12">12</option>
+    </select>
+    <br />
     <button onclick="generatePolygon()">Generate Polygon</button>
     <button onclick="testExpansion()">Expand example</button>
+    <button onclick="testRotation()">Rotating</button>
     <button onclick="examine()">Triangle barycentric coordinates</button>
 
     <canvas id="canvas" width="500" height="500"></canvas>
