graph the circumscribed vs inscribed area

--- a/polygon.html
+++ b/polygon.html
@@ -58,6 +58,8 @@
 
     <canvas id="canvas" width="500" height="500"></canvas>
 
+    <canvas id="graph" width="500" height="200"></canvas>
+
     <script src="engine.js"></script>
   </body>
 </html>
